--- a/dvdb-war/src/main/webapp/WEB-INF/skins/dvdb3/footer.xhtml
+++ b/dvdb-war/src/main/webapp/WEB-INF/skins/dvdb3/footer.xhtml
@@ -10,7 +10,7 @@
 	<div class="yui-g">
 	<div class="yui-g first">
 	<div class="yui-u first">
-	<h5>Suche</h5>
+	<h5>Suchen</h5>
 	<ul>
 		<li><s:link view="/discover/dvd/newSearch.seam"
 			propagation="none"
@@ -27,7 +27,7 @@
 	</ul>
 	</div>
 	<div class="yui-u">
-	<h5>Verwalte</h5>
+	<h5>Verwalten</h5>
 	<ul>
 		<li><s:link view="/mb/index.xhtml" propagation="none">
 			<f:param name="username" value="#{actor.user.username}" />
@@ -47,11 +47,11 @@
 	</div>
 	<div class="yui-g">
 	<div class="yui-u first">
-	<h5>Unterstütze</h5>
+	<h5>Verbessern</h5>
 	<ul>
 		<li><a href="http://github.com/chris-dvdb/dvdb.de"
 			class="ext-link" title="dvdb.de Sourcen bei github"><span
-			class="icon">Source Code (AGPL V3)</span></a></li>
+			class="icon">dvdb.de Source Code (AGPL V3)</span></a></li>
 		<li><s:link view="/other/bugs.xhtml" propagation="none"
 			value="#{messages['other.bugs.headline']}">
 		</s:link></li>
@@ -64,7 +64,7 @@
 	</ul>
 	</div>
 	<div class="yui-u">
-	<h5>Folge</h5>
+	<h5>Folgen</h5>
 	<ul>
 		<li><a href="http://twitter.com/dvdb_de" class="ext-link"
 			title="on Twitter"><span class="icon">bei Twitter</span></a></li>
