more refactoring, cleanup

--- a/dvdb-war/src/main/webapp/WEB-INF/skins/dvdb3/footer.xhtml
+++ b/dvdb-war/src/main/webapp/WEB-INF/skins/dvdb3/footer.xhtml
@@ -47,7 +47,7 @@
 	</div>
 	<div class="yui-g">
 	<div class="yui-u first">
-	<h5>Verbessern</h5>
+	<h5>Mitmachen</h5>
 	<ul>
 		<li><a href="http://github.com/chris-dvdb/dvdb.de"
 			class="ext-link" title="dvdb.de Sourcen bei github"><span
