--- a/dvdb-war/src/main/webapp/signup.xhtml
+++ b/dvdb-war/src/main/webapp/signup.xhtml
@@ -100,7 +100,7 @@ var RecaptchaOptions = {
 						src="http://api.recaptcha.net/challenge?k=#{applicationSettings.recaptchaPublicKey}" />
 
 					<noscript><iframe
-						src="http://api.recaptcha.net/noscript?k=#{applicationSettings.recaptchaPublicKey"
+						src="http://api.recaptcha.net/noscript?k=#{applicationSettings.recaptchaPublicKey}"
 						height="300" width="500" frameborder="0"></iframe><br />
 					<textarea name="recaptcha_challenge_field" rows="3" cols="40"></textarea>
 					<input type="hidden" name="recaptcha_response_field"
