fixed password, class names etc.

--- a/dvdb-war/src/main/webapp/WEB-INF/inc/item/dynamicItemContent.xhtml
+++ b/dvdb-war/src/main/webapp/WEB-INF/inc/item/dynamicItemContent.xhtml
@@ -121,7 +121,7 @@
 	</a4j:form>
 
 	<s:fragment
-		rendered="#{mediabaseItemVar.class.name eq 'de.dvdb.mediabase.domain.MediabaseItemCollectible'}">
+		rendered="#{mediabaseItemVar.class.name eq 'de.dvdb.domain.model.mediabase.MediabaseItemCollectible'}">
 		<h2>Moviebase Details</h2>
 
 		<ul>
@@ -166,7 +166,7 @@
 	</s:fragment>
 
 	<s:fragment
-		rendered="#{mediabaseItemVar.class.name eq 'de.dvdb.mediabase.domain.MediabaseItemWish'}">
+		rendered="#{mediabaseItemVar.class.name eq 'de.dvdb.domain.model.mediabase.MediabaseItemWish'}">
 
 		<h2>Wunsch Details</h2>
 
