--- a/dvdb-war/src/main/webapp/account/changePassword.xhtml
+++ b/dvdb-war/src/main/webapp/account/changePassword.xhtml
@@ -31,7 +31,7 @@
 
 			<p><s:decorate template="/WEB-INF/inc/editField.xhtml">
 				<ui:define name="label">Dein aktuelles Passwort:</ui:define>
-				<h:inputSecret value="#{currentPassword}" required="true"
+				<h:inputSecret value="#{changePasswordAction.currentPassword}" required="true"
 					id="currentpassword">
 					<s:validate />
 				</h:inputSecret>
@@ -39,7 +39,7 @@
 
 			<p><s:decorate template="/WEB-INF/inc/editField.xhtml">
 				<ui:define name="label">Dein neues Passwort:</ui:define>
-				<h:inputSecret value="#{newPassword}" required="true"
+				<h:inputSecret value="#{changePasswordAction.newPassword}" required="true"
 					id="newpassword">
 					<s:validate />
 				</h:inputSecret>
@@ -47,7 +47,7 @@
 
 			<p><s:decorate template="/WEB-INF/inc/editField.xhtml">
 				<ui:define name="label">Wiederholung Deines neuen Passwortes:</ui:define>
-				<h:inputSecret value="#{passwordConfirmation}" required="true"
+				<h:inputSecret value="#{changePasswordAction.passwordConfirmation}" required="true"
 					id="passwordconfirmation" />
 			</s:decorate></p>
 
