Basics for dialog

--- a/dvdb-war/src/main/webapp/WEB-INF/skins/dvdb3/template2cols.xhtml
+++ b/dvdb-war/src/main/webapp/WEB-INF/skins/dvdb3/template2cols.xhtml
@@ -5,6 +5,8 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:c="http://java.sun.com/jstl/core"
 	xmlns:f="http://java.sun.com/jsf/core"
+		xmlns:p="http://primefaces.prime.com.tr/ui"
+	
 	xmlns:s="http://jboss.com/products/seam/taglib" xml:lang="de" lang="de">
 <f:view contentType="text/html">
 
@@ -33,6 +35,9 @@ var YUIConfig = {
 
 	<ui:include src="/WEB-INF/skins/dvdb3/admanager.xhtml" />
 
+
+	<p:resources />
+	
 	</head>
 	<body>
 
