--- a/dvdb-war/src/main/webapp/discover/dvd/results.xhtml
+++ b/dvdb-war/src/main/webapp/discover/dvd/results.xhtml
@@ -19,7 +19,7 @@
 
 	<ui:define name="main">
 
-		<h:form>
+		<h:form prependId="false">
 
 			<h1>#{messages[searchContext.headlineKey]}</h1>
 			<div class="report"><ui:include src="inc/resultset.xhtml">
