--- a/dvdb-war/src/main/webapp/discover/dvd/inc/datatable.xhtml
+++ b/dvdb-war/src/main/webapp/discover/dvd/inc/datatable.xhtml
@@ -4,10 +4,23 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:s="http://jboss.com/products/seam/taglib"
+	xmlns:p="http://primefaces.prime.com.tr/ui"
 	xmlns:f="http://java.sun.com/jsf/core">
 
-	<h:dataTable id="itemList" var="itemVar"
-		value="#{resultList}" rowClasses="odd,even" 
+	<p:dialog widgetVar="itemManager" modal="true" fixedCenter="true" width="500" height="300">
+		<p:outputPanel id="manageItemDialog">
+			<h:outputText value="Title #{selectedItem.title}" />
+			
+			<p>
+			<p:commandButton onclick="itemManager.hide()" action="#{itemController.doIt}"
+				value="Close" />
+			</p>
+			
+		</p:outputPanel>
+	</p:dialog>
+
+	<h:dataTable id="itemList" var="itemVar" value="#{resultList}"
+		rowClasses="odd,even"
 		columnClasses="column-center,column-left,column-left,column-center,column-center">
 
 		<h:column>
@@ -98,8 +111,8 @@
 					<ui:param name="itemDetails" value="#{itemVar}" />
 				</ui:include>
 				<h:graphicImage
-					value="/assets/art/mediatype/#{itemVar.mediaType}.gif"
-					width="55" height="13" />
+					value="/assets/art/mediatype/#{itemVar.mediaType}.gif" width="55"
+					height="13" />
 				<br />
 				<h:outputText value=" #{itemVar.length} Min."
 					rendered="#{itemVar.length ne null}" />
@@ -125,63 +138,12 @@
 		</h:column>
 
 		<h:column>
-
-			<s:fragment
-				rendered="#{!itemVar.requires18 or actor.user.adult eq true}">
-
-				<s:link view="/manage/edit.xhtml"
-					action="#{addMediabaseItemIntention.addMediabaseItemWish}"
-					title="In Wunschliste aufnehmen" propagation="nest"
-					rendered="#{itemVar.mediabaseItem == null or !identity.loggedIn}">
-					<f:param name="item" value="#{itemVar.id}" />
-					<h:graphicImage value="/img/icons/22x22/bookmark_add.png"
-						width="22" height="22" style="padding-left: 1em;" />
-				</s:link>
-
-				<s:link view="/manage/edit.xhtml"
-					title="In meine #{applicationSettings.seoPrimaryKeyword} aufnehmen"
-					propagation="nest"
-					action="#{addMediabaseItemIntention.addMediabaseItemCollectible}"
-					rendered="#{itemVar.mediabaseItem == null or !identity.loggedIn}">
-					<f:param name="item" value="#{itemVar.id}" />
-					<h:graphicImage value="/img/icons/22x22/edit_add.png" width="22"
-						height="22" style="padding-left: 1em;" />
-				</s:link>
-
-				<s:link view="/manage/edit.xhtml" title="In Moviebase ueberarbeiten"
-					rendered="#{itemVar.mediabaseItem.status eq 0}" propagation="nest">
-					<f:param name="item" value="#{itemVar.id}" />
-					<h:graphicImage value="/img/icons/22x22/ok.png" width="22"
-						height="22" />
-				</s:link>
-
-				<s:link view="/manage/edit.xhtml" title="In Moviebase ueberarbeiten"
-					rendered="#{itemVar.mediabaseItem.status eq 2}" propagation="nest">
-					<f:param name="mediabaseItemId" value="#{itemVar.mediabaseItem.id}" />
-					<f:param name="item" value="#{itemVar.id}" />
-					<h:graphicImage value="/img/icons/22x22/ark.png" width="22"
-						height="22" />
-				</s:link>
-
-				<s:link view="/manage/edit.xhtml" title="In Moviebase ueberarbeiten"
-					rendered="#{itemVar.mediabaseItem.status eq 3}" propagation="nest">
-					<f:param name="mediabaseItemId" value="#{itemVar.mediabaseItem.id}" />
-					<f:param name="item" value="#{itemVar.id}" />
-					<h:graphicImage value="/img/icons/22x22/edit_group.png" width="22"
-						height="22" />
-				</s:link>
-
-				<s:link view="/manage/edit.xhtml"
-					title="In Wunschliste ueberarbeiten"
-					rendered="#{itemVar.mediabaseItem.status eq 1}" propagation="nest">
-					<f:param name="item" value="#{itemVar.id}" />
-					<h:graphicImage value="/img/icons/22x22/bookmark.png" width="22"
-						height="22" />
-				</s:link>
-			</s:fragment>
+			<p:commandButton update="manageItemDialog" onclick="itemManager.show()"
+				value="Manage" async="true" action="#{itemController.test(itemVar)}" />
 
 		</h:column>
 
 	</h:dataTable>
+
 
 </ui:composition>
