--- a/dvdb-war/src/main/webapp/manage/pdf.xhtml
+++ b/dvdb-war/src/main/webapp/manage/pdf.xhtml
@@ -19,7 +19,7 @@
 
 	<ui:define name="main">
 
-		<iframe src="http://php.dvdb.de/pdf/?username=#{actor.user.username}&amp;password=#{dvdbUtils.getMD5('php'.concat(actor.user.password))}" width="100%" height="700" scrolling="no" frameborder="no"/>
+		<iframe src="http://php.dvdb.de/pdf/?username=#{actor.user.username}&amp;password=#{dvdbUtils.getMD5('php'.concat(actor.user.username))}" width="100%" height="700" scrolling="no" frameborder="no"/>
 
 	</ui:define>
 
