--- a/dvdb-war/src/main/webapp/discover/dvd/inc/resultset.xhtml
+++ b/dvdb-war/src/main/webapp/discover/dvd/inc/resultset.xhtml
@@ -4,6 +4,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:s="http://jboss.com/products/seam/taglib"
+		xmlns:p="http://primefaces.prime.com.tr/ui"
 	xmlns:f="http://java.sun.com/jsf/core">
 
 	<ui:include src="/WEB-INF/inc/filter.xhtml">
